src/GeneratedAntlr/CalculatorParser.ts
// Generated from ./src/Calculator.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CalculatorListener } from "./CalculatorListener";
import { CalculatorVisitor } from "./CalculatorVisitor";


export class CalculatorParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly NUMBER = 10;
	public static readonly FLOAT = 11;
	public static readonly DIGIT = 12;
	public static readonly MOD = 13;
	public static readonly WHOLE = 14;
	public static readonly MUL = 15;
	public static readonly DIV = 16;
	public static readonly ADD = 17;
	public static readonly SUB = 18;
	public static readonly PI = 19;
	public static readonly EXPONENT = 20;
	public static readonly NEGEXPONENT = 21;
	public static readonly EULER = 22;
	public static readonly SQRT = 23;
	public static readonly SQR = 24;
	public static readonly FLOOR = 25;
	public static readonly CEIL = 26;
	public static readonly ABS = 27;
	public static readonly ROUNDK = 28;
	public static readonly ROUND = 29;
	public static readonly TRUNC = 30;
	public static readonly SIN = 31;
	public static readonly COS = 32;
	public static readonly TAN = 33;
	public static readonly COT = 34;
	public static readonly SINH = 35;
	public static readonly COSH = 36;
	public static readonly TANH = 37;
	public static readonly ASI = 38;
	public static readonly ARCCOS = 39;
	public static readonly ARCTAN = 40;
	public static readonly ARCTAN2 = 41;
	public static readonly ARCCOT = 42;
	public static readonly EXP = 43;
	public static readonly LN = 44;
	public static readonly EEX = 45;
	public static readonly LOG = 46;
	public static readonly RAD = 47;
	public static readonly DEG = 48;
	public static readonly MIN = 49;
	public static readonly MAX = 50;
	public static readonly WS = 51;
	public static readonly COM = 52;
	public static readonly SUBSTITUTION = 53;
	public static readonly SEMICOLON = 54;
	public static readonly INVALID = 55;
	public static readonly RULE_calculator = 0;
	public static readonly RULE_expression = 1;
	public static readonly RULE_trailingComment = 2;
	public static readonly RULE_compileUnit = 3;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"calculator", "expression", "trailingComment", "compileUnit",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'='", "'('", "')'", "'^'", "'**'", "'%'", "'~'", "'//'", "'()'", 
		undefined, undefined, undefined, undefined, undefined, "'*'", "'/'", "'+'", 
		"'-'", undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "';'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "NUMBER", "FLOAT", "DIGIT", "MOD", "WHOLE", 
		"MUL", "DIV", "ADD", "SUB", "PI", "EXPONENT", "NEGEXPONENT", "EULER", 
		"SQRT", "SQR", "FLOOR", "CEIL", "ABS", "ROUNDK", "ROUND", "TRUNC", "SIN", 
		"COS", "TAN", "COT", "SINH", "COSH", "TANH", "ASI", "ARCCOS", "ARCTAN", 
		"ARCTAN2", "ARCCOT", "EXP", "LN", "EEX", "LOG", "RAD", "DEG", "MIN", "MAX", 
		"WS", "COM", "SUBSTITUTION", "SEMICOLON", "INVALID",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CalculatorParser._LITERAL_NAMES, CalculatorParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CalculatorParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Calculator.g4"; }

	// @Override
	public get ruleNames(): string[] { return CalculatorParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CalculatorParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CalculatorParser._ATN, this);
	}
	// @RuleVersion(0)
	public calculator(): CalculatorContext {
		let _localctx: CalculatorContext = new CalculatorContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CalculatorParser.RULE_calculator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 8;
			this.expression(0);
			this.state = 10;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CalculatorParser.T__0) {
				{
				this.state = 9;
				this.match(CalculatorParser.T__0);
				}
			}

			this.state = 13;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CalculatorParser.SEMICOLON) {
				{
				this.state = 12;
				this.trailingComment();
				}
			}

			this.state = 15;
			this.compileUnit();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
		let _prevctx: ExpressionContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, CalculatorParser.RULE_expression, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 124;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				{
				_localctx = new UnaryContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 18;
				this.match(CalculatorParser.SUB);
				this.state = 19;
				this.expression(45);
				}
				break;

			case 2:
				{
				_localctx = new UnaryPlusContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 20;
				this.match(CalculatorParser.ADD);
				this.state = 21;
				this.expression(44);
				}
				break;

			case 3:
				{
				_localctx = new FloorContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 22;
				this.match(CalculatorParser.FLOOR);
				this.state = 23;
				this.expression(43);
				}
				break;

			case 4:
				{
				_localctx = new CeilContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 24;
				this.match(CalculatorParser.CEIL);
				this.state = 25;
				this.expression(42);
				}
				break;

			case 5:
				{
				_localctx = new AbsContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 26;
				this.match(CalculatorParser.ABS);
				this.state = 27;
				this.expression(41);
				}
				break;

			case 6:
				{
				_localctx = new RoundkContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 28;
				this.match(CalculatorParser.ROUNDK);
				this.state = 29;
				this.match(CalculatorParser.T__1);
				this.state = 30;
				this.expression(0);
				this.state = 31;
				this.match(CalculatorParser.SEMICOLON);
				this.state = 32;
				this.expression(0);
				this.state = 33;
				this.match(CalculatorParser.T__2);
				}
				break;

			case 7:
				{
				_localctx = new RoundContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 35;
				this.match(CalculatorParser.ROUND);
				this.state = 36;
				this.expression(39);
				}
				break;

			case 8:
				{
				_localctx = new TruncContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 37;
				this.match(CalculatorParser.TRUNC);
				this.state = 38;
				this.expression(38);
				}
				break;

			case 9:
				{
				_localctx = new SinContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 39;
				this.match(CalculatorParser.SIN);
				this.state = 40;
				this.expression(37);
				}
				break;

			case 10:
				{
				_localctx = new CosContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 41;
				this.match(CalculatorParser.COS);
				this.state = 42;
				this.expression(36);
				}
				break;

			case 11:
				{
				_localctx = new TanContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 43;
				this.match(CalculatorParser.TAN);
				this.state = 44;
				this.expression(35);
				}
				break;

			case 12:
				{
				_localctx = new CotContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 45;
				this.match(CalculatorParser.COT);
				this.state = 46;
				this.expression(34);
				}
				break;

			case 13:
				{
				_localctx = new SinhContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 47;
				this.match(CalculatorParser.SINH);
				this.state = 48;
				this.expression(33);
				}
				break;

			case 14:
				{
				_localctx = new CoshContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 49;
				this.match(CalculatorParser.COSH);
				this.state = 50;
				this.expression(32);
				}
				break;

			case 15:
				{
				_localctx = new TanhContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 51;
				this.match(CalculatorParser.TANH);
				this.state = 52;
				this.expression(31);
				}
				break;

			case 16:
				{
				_localctx = new ASIContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 53;
				this.match(CalculatorParser.ASI);
				this.state = 54;
				this.expression(30);
				}
				break;

			case 17:
				{
				_localctx = new ArccosContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 55;
				this.match(CalculatorParser.ARCCOS);
				this.state = 56;
				this.expression(29);
				}
				break;

			case 18:
				{
				_localctx = new ArctanContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 57;
				this.match(CalculatorParser.ARCTAN);
				this.state = 58;
				this.expression(28);
				}
				break;

			case 19:
				{
				_localctx = new Arctan2Context(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 59;
				this.match(CalculatorParser.ARCTAN2);
				this.state = 60;
				this.match(CalculatorParser.T__1);
				this.state = 61;
				this.expression(0);
				this.state = 62;
				this.match(CalculatorParser.SEMICOLON);
				this.state = 63;
				this.expression(0);
				this.state = 64;
				this.match(CalculatorParser.T__2);
				}
				break;

			case 20:
				{
				_localctx = new ArccotContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 66;
				this.match(CalculatorParser.ARCCOT);
				this.state = 67;
				this.expression(26);
				}
				break;

			case 21:
				{
				_localctx = new ExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 68;
				this.match(CalculatorParser.EXP);
				this.state = 69;
				this.expression(25);
				}
				break;

			case 22:
				{
				_localctx = new LnContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 70;
				this.match(CalculatorParser.LN);
				this.state = 71;
				this.expression(24);
				}
				break;

			case 23:
				{
				_localctx = new EexContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 72;
				this.match(CalculatorParser.EEX);
				this.state = 73;
				this.expression(23);
				}
				break;

			case 24:
				{
				_localctx = new LogContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 74;
				this.match(CalculatorParser.LOG);
				this.state = 75;
				this.expression(22);
				}
				break;

			case 25:
				{
				_localctx = new RadContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 76;
				this.match(CalculatorParser.RAD);
				this.state = 77;
				this.expression(21);
				}
				break;

			case 26:
				{
				_localctx = new DegContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 78;
				this.match(CalculatorParser.DEG);
				this.state = 79;
				this.expression(20);
				}
				break;

			case 27:
				{
				_localctx = new SqrtContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 80;
				this.match(CalculatorParser.SQRT);
				this.state = 81;
				this.expression(19);
				}
				break;

			case 28:
				{
				_localctx = new SqrContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 82;
				this.match(CalculatorParser.SQR);
				this.state = 83;
				this.expression(18);
				}
				break;

			case 29:
				{
				_localctx = new ParenthesisContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 84;
				this.match(CalculatorParser.T__1);
				this.state = 85;
				this.expression(0);
				this.state = 86;
				this.match(CalculatorParser.T__2);
				}
				break;

			case 30:
				{
				_localctx = new MultContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 88;
				this.match(CalculatorParser.T__1);
				this.state = 89;
				this.expression(0);
				this.state = 90;
				this.match(CalculatorParser.T__2);
				this.state = 91;
				this.expression(8);
				}
				break;

			case 31:
				{
				_localctx = new MinContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 93;
				this.match(CalculatorParser.MIN);
				this.state = 94;
				this.match(CalculatorParser.T__1);
				this.state = 95;
				(_localctx as MinContext)._expression = this.expression(0);
				(_localctx as MinContext)._expr.push((_localctx as MinContext)._expression);
				this.state = 100;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === CalculatorParser.SEMICOLON) {
					{
					{
					this.state = 96;
					this.match(CalculatorParser.SEMICOLON);
					this.state = 97;
					(_localctx as MinContext)._expression = this.expression(0);
					(_localctx as MinContext)._expr.push((_localctx as MinContext)._expression);
					}
					}
					this.state = 102;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 103;
				this.match(CalculatorParser.T__2);
				}
				break;

			case 32:
				{
				_localctx = new MaxContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 105;
				this.match(CalculatorParser.MAX);
				this.state = 106;
				this.match(CalculatorParser.T__1);
				this.state = 107;
				(_localctx as MaxContext)._expression = this.expression(0);
				(_localctx as MaxContext)._expr.push((_localctx as MaxContext)._expression);
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === CalculatorParser.SEMICOLON) {
					{
					{
					this.state = 108;
					this.match(CalculatorParser.SEMICOLON);
					this.state = 109;
					(_localctx as MaxContext)._expression = this.expression(0);
					(_localctx as MaxContext)._expr.push((_localctx as MaxContext)._expression);
					}
					}
					this.state = 114;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 115;
				this.match(CalculatorParser.T__2);
				}
				break;

			case 33:
				{
				_localctx = new NumberContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 117;
				this.match(CalculatorParser.NUMBER);
				}
				break;

			case 34:
				{
				_localctx = new PiContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 118;
				this.match(CalculatorParser.PI);
				this.state = 120;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
				case 1:
					{
					this.state = 119;
					this.match(CalculatorParser.T__8);
					}
					break;
				}
				}
				break;

			case 35:
				{
				_localctx = new EulerContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 122;
				this.match(CalculatorParser.EULER);
				}
				break;

			case 36:
				{
				_localctx = new SubstitutionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 123;
				this.match(CalculatorParser.SUBSTITUTION);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 157;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 155;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
					case 1:
						{
						_localctx = new ExponentContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CalculatorParser.RULE_expression);
						this.state = 126;
						if (!(this.precpred(this._ctx, 17))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 17)");
						}
						this.state = 127;
						this.match(CalculatorParser.EXPONENT);
						this.state = 128;
						this.expression(18);
						}
						break;

					case 2:
						{
						_localctx = new NegExponentContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CalculatorParser.RULE_expression);
						this.state = 129;
						if (!(this.precpred(this._ctx, 16))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 16)");
						}
						this.state = 130;
						this.match(CalculatorParser.NEGEXPONENT);
						this.state = 131;
						this.expression(17);
						}
						break;

					case 3:
						{
						_localctx = new PowContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CalculatorParser.RULE_expression);
						this.state = 132;
						if (!(this.precpred(this._ctx, 15))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 15)");
						}
						this.state = 133;
						(_localctx as PowContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === CalculatorParser.T__3 || _la === CalculatorParser.T__4)) {
							(_localctx as PowContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 134;
						this.expression(16);
						}
						break;

					case 4:
						{
						_localctx = new ModContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CalculatorParser.RULE_expression);
						this.state = 135;
						if (!(this.precpred(this._ctx, 14))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 14)");
						}
						this.state = 136;
						_la = this._input.LA(1);
						if (!(_la === CalculatorParser.T__5 || _la === CalculatorParser.MOD)) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 137;
						this.expression(15);
						}
						break;

					case 5:
						{
						_localctx = new WholeContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CalculatorParser.RULE_expression);
						this.state = 138;
						if (!(this.precpred(this._ctx, 13))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 13)");
						}
						this.state = 139;
						this.match(CalculatorParser.WHOLE);
						this.state = 140;
						this.expression(14);
						}
						break;

					case 6:
						{
						_localctx = new SqRootContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CalculatorParser.RULE_expression);
						this.state = 141;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 142;
						(_localctx as SqRootContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === CalculatorParser.T__6 || _la === CalculatorParser.T__7)) {
							(_localctx as SqRootContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 143;
						this.expression(13);
						}
						break;

					case 7:
						{
						_localctx = new MulDivContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CalculatorParser.RULE_expression);
						this.state = 144;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 145;
						(_localctx as MulDivContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === CalculatorParser.MUL || _la === CalculatorParser.DIV)) {
							(_localctx as MulDivContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 146;
						this.expression(12);
						}
						break;

					case 8:
						{
						_localctx = new AddSubContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CalculatorParser.RULE_expression);
						this.state = 147;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 148;
						(_localctx as AddSubContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === CalculatorParser.ADD || _la === CalculatorParser.SUB)) {
							(_localctx as AddSubContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 149;
						this.expression(6);
						}
						break;

					case 9:
						{
						_localctx = new MultContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CalculatorParser.RULE_expression);
						this.state = 150;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 151;
						this.match(CalculatorParser.T__1);
						this.state = 152;
						this.expression(0);
						this.state = 153;
						this.match(CalculatorParser.T__2);
						}
						break;
					}
					}
				}
				this.state = 159;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public trailingComment(): TrailingCommentContext {
		let _localctx: TrailingCommentContext = new TrailingCommentContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CalculatorParser.RULE_trailingComment);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.match(CalculatorParser.SEMICOLON);
			this.state = 164;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1 + 1) {
					{
					{
					this.state = 161;
					this.matchWildcard();
					}
					}
				}
				this.state = 166;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public compileUnit(): CompileUnitContext {
		let _localctx: CompileUnitContext = new CompileUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CalculatorParser.RULE_compileUnit);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 167;
			this.match(CalculatorParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
